[package]
name = "bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
polars = { version = "0.28.0", features = ["lazy","temporal","describe","json","parquet","dtype-datetime","dtype-struct"] }
rand = "0.8.5"
